--- a/webapp/golang/Dockerfile
+++ b/webapp/golang/Dockerfile
@@ -2,6 +2,9 @@ FROM golang:1.20
 
 RUN mkdir -p /home/webapp
 WORKDIR /home/webapp
+COPY go.mod /home/webapp
+COPY go.sum /home/webapp
+RUN go mod download
 COPY . /home/webapp
-RUN go build -o app
-CMD ./app
+RUN go install github.com/cosmtrek/air@v1.27.3
+CMD ["air", "-c", ".air.toml"]
