add renovate config to update golang version on ansible

--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,16 @@
   "extends": [
     "config:base"
   ],
+  "regexManagers": [
+    {
+      "fileMatch": [
+        "provisioning/image/ansible/04_xbuild.yml"
+      ],
+      "matchStrings": [
+        "datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\n.*-install (?<currentValue>[^ ]*).*\n"
+      ]
+    }
+  ],
   "postUpdateOptions": [
     "gomodTidy",
     "gomodUpdateImportPaths"
