--- a/provisioning/image/ansible/04_xbuild.yml
+++ b/provisioning/image/ansible/04_xbuild.yml
@@ -20,7 +20,7 @@
       tags:
         - nodejs
     # golang
-    # datasource=golang-version
+    # datasource=golang-version depName=golang
     - shell: /home/isucon/.xbuild/go-install 1.19.5 /home/isucon/.local/go $(uname -s | tr [A-Z] [a-z]) $(dpkg --print-architecture)
       args:
         creates: /home/isucon/.local/go/bin/go
