--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,17 @@
         "provisioning/image/ansible/04_xbuild.yml"
       ],
       "matchStrings": [
-        "datasource=(?<datasource>.*?)( depName=(?<depName>.*?))?( versioning=(?<versioning>.*?))?\n.*?-install (?<currentValue>[0-9.]*).*\n"
+        "datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\n.*?-install (?<currentValue>[0-9.]*).*\n"
+      ]
+    },
+    {
+      "fileMatch": [
+        "provisioning/bench/ansible/02_golang.yml"
+      ],
+      "datasourceTemplate": "golang-version",
+      "depNameTemplate": "golang",
+      "matchStrings": [
+        "go(?<currentValue>[0-9]*.[0-9]*.[0-9]*)"
       ]
     }
   ],
