--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1'
+          cpus: "1"
           memory: 1g
 
   mysql:
@@ -46,7 +46,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1'
+          cpus: "1"
           memory: 1g
 
   memcached:
