--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -18,6 +18,11 @@ server {
   client_max_body_size 10m;
   root /public/;
 
+  location ~^/(favicon\.ico|css/|js/|img/) {
+    root /public/;
+    expires 1d;
+  }
+
   location / {
     proxy_set_header Host $host;
     proxy_pass http://app:8080;
