--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -11,6 +11,7 @@ log_format json escape=json '{"time":"$time_iso8601",'
     '"response_time":"$upstream_response_time"}';
 
 access_log /var/log/nginx/access.log json;
+access_log /var/log/nginx/_access.log json;
 
 server {
   listen 80;
