Upload images as static files (#8)

--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -24,8 +24,19 @@ server {
     expires 1d;
   }
 
+  location /image/ {
+    root /public/;
+    expires 1d;
+    try_files $uri @app;
+  }
+
   location / {
     proxy_set_header Host $host;
+    proxy_pass http://app:8080;
+  }
+
+  location @app {
+    internal;
     proxy_pass http://app:8080;
   }
 }
