--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - "MYSQL_ROOT_HOST=%"
       - "MYSQL_ROOT_PASSWORD=root"
     volumes:
-      - mysql:/var/lib/mysql
+      - ./mysql:/var/lib/mysql
       - ./etc/my.cnf:/etc/my.cnf
       - ./sql:/docker-entrypoint-initdb.d
     ports:
