--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -10,8 +10,7 @@ services:
       - app
 
   app:
-    # Go実装の場合は golang/ PHP実装の場合は php/
-    build: ruby/
+    build: go/
     environment:
       ISUCONP_DB_HOST: mysql
       ISUCONP_DB_PORT: 3306
