アクセスログを取る

--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -1,4 +1,17 @@
+log_format json escape=json '{'
+  '"time":"$time_iso8601",'
+  '"method":"$request_method",'
+  '"uri":"$request_uri",'
+  '"status":"$status",'
+  '"body_bytes":"$body_bytes_sent",'
+  '"request_time":"$request_time",'
+  '"response_time":"$upstream_response_time"'
+'}';
+
 server {
+  access_log /var/log/nginx/access.log json;
+  error_log /var/log/nginx/error.log;
+
   listen 80;
 
   client_max_body_size 10m;
