スロークエリログを取る

--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - ./mysql:/var/lib/mysql
       - ./etc/my.cnf:/etc/my.cnf
       - ./sql:/docker-entrypoint-initdb.d
+      - ./logs/mysql:/var/log/mysql
     ports:
       - "3306:3306"
     deploy:
