--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -17,6 +17,16 @@ server {
   client_max_body_size 10m;
   root /public/;
 
+  location /image {
+    alias /public/img;
+    try_files $uri @app;
+  }
+
+  location @app {
+    proxy_set_header Host $host;
+    proxy_pass http://app:8080;
+  }
+
   location / {
     proxy_set_header Host $host;
     proxy_pass http://app:8080;
