ユーザーの画像以外の静的ファイルもnginxから返す&キャッシュさせる

--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -17,6 +17,11 @@ server {
   client_max_body_size 10m;
   root /public/;
 
+  location ~ ^/(favicon.ico|css/|js/|img/) {
+    root /public;
+    expires 1d;
+  }
+
   location /image {
     alias /public/img;
     expires 1d;
