--- a/webapp/go/Dockerfile
+++ b/webapp/go/Dockerfile
@@ -1,5 +1,7 @@
 FROM golang:1.21
 
+RUN apt update && \
+    apt install -y gv graphviz
 RUN mkdir -p /home/webapp
 WORKDIR /home/webapp
 COPY . /home/webapp
