Update PHP version and install libssl-dev in Dockerfile

--- a/webapp/php/Dockerfile
+++ b/webapp/php/Dockerfile
@@ -1,7 +1,7 @@
-FROM php:8.2-fpm-bullseye
+FROM php:8.3-fpm-bookworm
 
 RUN apt update && apt install -y \
-  unzip libmemcached-dev zlib1g-dev
+  unzip libmemcached-dev zlib1g-dev libssl-dev
 
 RUN docker-php-ext-install pdo pdo_mysql
 
