fix build target in docker-compose.yml

--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   app:
     # Go実装の場合は golang/ PHP実装の場合は php/
-    build: php/
+    build: ruby/
     environment:
       ISUCONP_DB_HOST: mysql
       ISUCONP_DB_PORT: 3306
