🔊init commit with logging

--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -1,3 +1,19 @@
+log_format ltsv "time:$time_local"
+  "\thost:$remote_addr"
+  "\tforwardedfor:$http_x_forwarded_for"
+  "\treq:$request"
+  "\tmethod:$request_method"
+  "\turi:$request_uri"
+  "\tstatus:$status"
+  "\tsize:$body_bytes_sent"
+  "\treferer:$http_referer"
+  "\tua:$http_user_agent"
+  "\treqtime:$request_time"
+  "\truntime:$upstream_http_x_runtime"
+  "\tapptime:$upstream_response_time"
+  "\tcache:$upstream_http_x_cache"
+  "\tvhost:$host";
+
 server {
   listen 80;
 
@@ -8,4 +24,6 @@ server {
     proxy_set_header Host $host;
     proxy_pass http://app:8080;
   }
+
+  access_log  /var/log/nginx/access.log ltsv;
 }
