--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,16 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-buildx-
 
+    - name: Cache make init results
+      uses: actions/cache@v2
+      with:
+        path: |
+          webapp/sql/dump.sql
+          benchmarker/userdata/img
+        key: ${{ runner.os }}-make-init-${{ hashFiles('Makefile')}}
+        restore-keys: |
+          ${{ runner.os }}-make-init-
+
     - name: Initialize the project
       run: make init
 
@@ -27,3 +37,9 @@ jobs:
       run: |
         cd webapp
         docker compose up -d
+
+    - name: Run the benchmark
+      run: |
+        cd benchmarker
+        docker build -t private-isu-benchmarker .
+        docker run --network host --add-host host.docker.internal:host-gateway -i private-isu-benchmarker /opt/go/bin/benchmarker -t http://host.docker.internal -u /opt/go/userdata
