Add continue-on-error flag for benchmark job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,7 @@ jobs:
         docker compose up -d
 
     - name: Run the benchmark
+      continue-on-error: true
       run: |
         cd benchmarker
         docker build -t private-isu-benchmarker .
