Build benchmark and wait for data initialization before running benchmark

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,11 +51,23 @@ jobs:
         cd webapp
         docker compose up -d
 
+    - name: Build the benchmark
+      run: |
+        cd benchmarker
+        docker build -t private-isu-benchmarker .
+
+    - name: Wait for data initialization to complete
+      run: |
+        cd webapp
+        until docker compose exec -T mysql mysql -uroot -proot -e "SELECT 1 FROM posts LIMIT 1;" isuconp; do
+          echo "Waiting for database initialization..."
+          sleep 10
+        done
+
     - name: Run the benchmark
       continue-on-error: true
       run: |
         cd benchmarker
-        docker build -t private-isu-benchmarker .
         docker run --network host --add-host host.docker.internal:host-gateway -i private-isu-benchmarker /opt/go/bin/benchmarker -t http://host.docker.internal -u /opt/go/userdata
 
     - name: Show logs
