--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,35 @@ jobs:
         cd webapp
         docker compose up -d
 
-    - name: Run the benchmark
+    - name: Build the benchmark
       run: |
         cd benchmarker
         docker build -t private-isu-benchmarker .
+
+    - name: Wait for data initialization to complete
+      run: |
+        cd webapp
+        until docker compose exec -T mysql mysql -uroot -proot -e "SELECT 1 FROM posts LIMIT 1;" isuconp; do
+          echo "Waiting for database initialization..."
+          sleep 10
+        done
+        until docker compose exec -T mysql mysql -uroot -proot -e "SELECT 1 FROM users LIMIT 1;" isuconp; do
+          echo "Waiting for database initialization..."
+          sleep 10
+        done
+        until docker compose exec -T mysql mysql -uroot -proot -e "SELECT 1 FROM comments LIMIT 1;" isuconp; do
+          echo "Waiting for database initialization..."
+          sleep 10
+        done
+        sleep 10
+
+    - name: Run the benchmark
+      continue-on-error: true
+      run: |
+        cd benchmarker
+        docker run --network host --add-host host.docker.internal:host-gateway -i private-isu-benchmarker /opt/go/bin/benchmarker -t http://host.docker.internal -u /opt/go/userdata
+
+    - name: Show logs
+      run: |
+        cd webapp
+        docker compose logs
