--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,14 @@
 name: CI
 
-on: [push]
+on:
+  pull_request:
+    paths:
+      - 'webapp/golang/**'
+      - 'webapp/ruby/**'
+      - 'webapp/php/**'
+      - 'benchmarker/**'
+      - '.github/workflows/ci.yml'
+      - 'Makefile'
 
 jobs:
   build-and-test:
@@ -8,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -36,15 +46,16 @@ jobs:
     - name: Check for changes in golang directory
       id: check-changes
       run: |
-        if git diff --name-only ${{ github.sha }} | grep 'golang/'; then
+        git fetch origin
+        if git diff --name-only origin/master...${{ github.sha }} | grep 'golang/'; then
           echo "Changes detected in golang directory"
-          echo "::set-output name=go_changes_detected::true"
+          echo "go_changes_detected=true" >> $GITHUB_OUTPUT
         fi
 
     - name: Update compose.yml if changes are detected
       if: steps.check-changes.outputs.go_changes_detected == 'true'
       run: |
-        sed -i 's|build: ruby/|build: golang/|' ./webapp/compose.yml
+        sed -i 's|build: ruby/|build: golang/|' ./webapp/docker-compose.yml
 
     - name: Start the server
       run: |
