remove dump.sql
MySQL docker image support bz2 files directly.
https://github.com/docker-library/mysql/commit/c96b0f7f58d48590d054952bc1e77d1f57d32452

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       uses: actions/cache@v4
       with:
         path: |
-          webapp/sql/dump.sql
+          webapp/sql/dump.sql.bz2
           benchmarker/userdata/img
         key: ${{ runner.os }}-make-init-${{ hashFiles('Makefile')}}
         restore-keys: |
