Add docker-compose.yml to CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
       - 'benchmarker/**'
       - '.github/workflows/ci.yml'
       - 'Makefile'
+      - 'webapp/docker-compose.yml'
 
 jobs:
   build-and-test:
