Update Docker Compose command to include build flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
     - name: Start the server
       run: |
         cd webapp
-        docker compose up -d
+        docker compose up --build -d
 
     - name: Build the benchmark
       run: |
