--- a/provisioning/image/ansible/02_mysql.yml
+++ b/provisioning/image/ansible/02_mysql.yml
@@ -6,6 +6,19 @@
     - apt: name=mysql-server
     - apt: name=memcached
     - apt: name=python3-pymysql
+
+    - name: set temporary password
+      become: yes
+      become_user: root
+      when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "22.04"
+      blockinfile:
+        create: yes
+        dest: &myCnf /root/.my.cnf
+        content: |
+          [client]
+          user = root
+          password = root
+
     - name: create mysql user
       mysql_user:
         login_user: root
