--- a/provisioning/image/ansible/02_mysql.yml
+++ b/provisioning/image/ansible/02_mysql.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: guests:extras
   become: yes
-  gather_facts: no
+  gather_facts: yes
   tasks:
     - apt: name=mysql-server
     - apt: name=memcached
