Add concurrency settings for Ansible workflow

--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -6,6 +6,10 @@ on:
       - "provisioning/**"
       - ".github/workflows/ansible.yml"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-22.04
