Add exclude_for_test tag to reload nginx handler

--- a/provisioning/image/ansible/03_nginx.yml
+++ b/provisioning/image/ansible/03_nginx.yml
@@ -22,4 +22,5 @@
       notify: reload nginx
   handlers:
     - name: reload nginx
+      tags: exclude_for_test
       shell: /usr/sbin/nginx -t && systemctl reload nginx
