Update Ansible playbooks with extra-vars and handler_enabled

--- a/provisioning/image/ansible/03_nginx.yml
+++ b/provisioning/image/ansible/03_nginx.yml
@@ -22,5 +22,4 @@
       notify: reload nginx
   handlers:
     - name: reload nginx
-      tags: exclude_for_test
-      shell: /usr/sbin/nginx -t && systemctl reload nginx
+      shell: /usr/sbin/nginx -t
