--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Run Ansible playbook
         run: |
           cd provisioning
-          ansible-playbook --diff -i test image/ansible/playbooks.yml --skip-tags nodejs,exclude_for_test -e 'allinone=True'
+          ansible-playbook --diff -i test image/ansible/playbooks.yml --skip-tags nodejs,exclude_for_test --extra-vars "allinone=True handler_enabled=false"
 
       - name: Run Ansible playbook in check mode
         run: |
           cd provisioning
-          ansible-playbook --check --diff -i test image/ansible/playbooks.yml --skip-tags nodejs,exclude_for_test -e 'allinone=True'
+          ansible-playbook --check --diff -i test image/ansible/playbooks.yml --skip-tags nodejs,exclude_for_test --extra-vars "allinone=True handler_enabled=false"
