Add build context and dockerfile for app service in docker-compose.yml

--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -11,8 +11,13 @@ services:
       - my_network
 
   app:
-    # Go実装の場合は golang/ PHP実装の場合は php/
-    build: ruby/
+    build:
+      # Go実装の場合は golang/ PHP実装の場合は php/
+      context: ruby/
+      dockerfile: Dockerfile
+    depends_on:
+      - mysql
+      - memcached
     environment:
       ISUCONP_DB_HOST: mysql
       ISUCONP_DB_PORT: 3306
