--- a/webapp/ruby/Dockerfile
+++ b/webapp/ruby/Dockerfile
@@ -1,8 +1,10 @@
+#syntax=docker/dockerfile:1
 FROM ruby:3.3-slim
 
-RUN apt-get update -qq && apt-get install -y build-essential
-
-RUN apt-get install -y default-libmysqlclient-dev
+RUN \
+  --mount=type=cache,target=/var/lib/apt,sharing=locked \
+  --mount=type=cache,target=/var/cache/apt,sharing=locked \
+  apt-get update -qq && apt-get install -y build-essential default-libmysqlclient-dev
 
 RUN mkdir -p /home/webapp
 COPY Gemfile /home/webapp
@@ -11,4 +13,5 @@ WORKDIR /home/webapp
 RUN bundle config set --local path 'vendor/bundle'
 RUN bundle install
 COPY . /home/webapp
-CMD bundle exec foreman start
+
+ENTRYPOINT [ "bundle", "exec", "foreman", "start" ]
