--- a/webapp/golang/Dockerfile
+++ b/webapp/golang/Dockerfile
@@ -47,6 +47,7 @@ USER appuser
 
 # Copy the executable from the "build" stage.
 COPY --from=build /bin/server /bin/
+COPY ./templates ./templates
 
 # What the container should run when it is started.
 ENTRYPOINT [ "/bin/server" ]
