Refactor image and post link extraction to use iter

--- a/benchmarker/Makefile
+++ b/benchmarker/Makefile
@@ -1,4 +1,4 @@
 all: bin/benchmarker
 
-bin/benchmarker: *.go checker/*.go
+bin/benchmarker: *.go checker/*.go go.mod go.sum
 	go build -o bin/benchmarker
