--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     volumes:
       - ./etc/nginx/conf.d:/etc/nginx/conf.d
       - ./public:/public
+      - ./log/nginx:/var/log/nginx
     ports:
       - "80:80"
     networks:
@@ -13,7 +14,7 @@ services:
   app:
     build:
       # Go実装の場合は golang/ PHP実装の場合は php/
-      context: ruby/
+      context: golang/
       dockerfile: Dockerfile
     depends_on:
       - mysql
@@ -45,6 +46,8 @@ services:
     volumes:
       - mysql:/var/lib/mysql
       - ./sql:/docker-entrypoint-initdb.d
+      - ./etc/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./log/mysql:/var/log/mysql
     ports:
       - "3306:3306"
     networks:
