--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -1,3 +1,17 @@
+log_format json escape=json '{'
+  '"time":"$time_iso8601",'
+  '"host":"$remote_addr",'
+  '"port":$remote_port,'
+  '"method":"$request_method",'
+  '"uri":"$request_uri",'
+  '"status":"$status",'
+  '"body_bytes":$body_bytes_sent,'
+  '"referer":"$http_referer",'
+  '"ua":"$http_user_agent",'
+  '"request_time":"$request_time",'
+  '"response_time":"$upstream_response_time"}';
+
+
 server {
   listen 80;
 
