--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -11,7 +11,6 @@ log_format json escape=json '{'
   '"request_time":"$request_time",'
   '"response_time":"$upstream_response_time"}';
 
-
 server {
   listen 80;
 
@@ -22,4 +21,5 @@ server {
     proxy_set_header Host $host;
     proxy_pass http://app:8080;
   }
+  access_log /var/log/nginx/access.log json;
 }
