--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -17,6 +17,12 @@ server {
   client_max_body_size 10m;
   root /public/;
 
+  location /image/ {
+    proxy_set_header Host $host;
+    proxy_pass http://app:8080/image/;
+    expires 24h;
+  }
+
   location / {
     proxy_set_header Host $host;
     proxy_pass http://app:8080;
