Upgrade Ruby version from 3.3-slim to 3.4-slim in Dockerfile

--- a/webapp/ruby/Gemfile
+++ b/webapp/ruby/Gemfile
@@ -6,6 +6,7 @@ gem "sinatra-contrib"
 gem "rack"
 gem "foreman"
 gem "unicorn"
+gem 'bigdecimal'
 gem "mysql2"
 gem "rack-flash3"
 gem 'connection_pool'
