Refactor docker run command for better readability in CI workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,14 @@ jobs:
         continue-on-error: true
         run: |
           cd benchmarker
-          docker run --network host --add-host host.docker.internal:host-gateway -i private-isu-benchmarker /bin/benchmarker -t http://host.docker.internal -u /opt/userdata | tee benchmark_output.json || echo "BENCHMARK_FAILED=true" >> $GITHUB_ENV
+          docker run \
+            --network host \
+            --add-host host.docker.internal:host-gateway \
+            -i private-isu-benchmarker \
+            /bin/benchmarker \
+            -t http://host.docker.internal \
+            -u /opt/userdata \
+          | tee benchmark_output.json || echo "BENCHMARK_FAILED=true" >> $GITHUB_ENV
 
       - name: Show logs
         run: |
