--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,13 +31,16 @@ jobs:
         id: check-changes
         run: |
           git fetch origin
-          if git diff --name-only origin/master...${{ github.sha }} | grep 'golang/'; then
+          CHANGED_FILES=$(git diff --name-only origin/${{ github.event.pull_request.base.ref }}...HEAD)
+          if echo "$CHANGED_FILES" | grep 'golang/'; then
             echo "Changes detected in golang directory"
             echo "go_changes_detected=true" >> $GITHUB_OUTPUT
+            exit 0
           fi
-          if git diff --name-only origin/master...${{ github.sha }} | grep 'php/'; then
+          if echo "$CHANGED_FILES" | grep 'php/'; then
             echo "Changes detected in php directory"
             echo "php_changes_detected=true" >> $GITHUB_OUTPUT
+            exit 0
           fi
 
       - name: Download purl
@@ -56,7 +59,7 @@ jobs:
       - name: Update compose.yml if changes are detected
         if: steps.check-changes.outputs.php_changes_detected == 'true'
         run: |
-          purl -fail -overwrite -replace '@context: (ruby|golang)/@context: php/@' ./webapp/docker-compose.yml
+          purl -fail -overwrite -replace '@context: ruby/@context: php/@' ./webapp/docker-compose.yml
           mv webapp/etc/nginx/conf.d/default.conf webapp/etc/nginx/conf.d/default.conf.org
           mv webapp/etc/nginx/conf.d/php.conf.org webapp/etc/nginx/conf.d/php.conf
 
