--- a/webapp/python/pyproject.toml
+++ b/webapp/python/pyproject.toml
@@ -7,6 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.0",
     "gunicorn>=23.0.0",
-    "mysqlclient>=2.2.6",
+    "mysqlclient~=2.2.7",
     "pymemcache>=4.0.0",
 ]
