--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   app:
     build:
       # Go実装の場合は golang/ PHP実装の場合は php/
-      context: go/
+      context: golang/
       dockerfile: Dockerfile
     depends_on:
       - mysql
