--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -55,3 +55,7 @@ tasks:
   k6:
     desc: Load test with k6
     cmd: k6 run k6/integrated.js
+
+  show-gr:
+    desc: Show ER diagram
+    cmd: echo "http://localhost:3011"
